--- a/index.html
+++ b/index.html
@@ -205,8 +205,16 @@
       this.element.innerHTML = bananaSVG;
       this.x = Math.random() * (window.innerWidth - 60);
       this.y = Math.random() * (window.innerHeight - 60);
-      this.vx = (Math.random() - 0.5) * 0.5;
-      this.vy = (Math.random() - 0.5) * 0.5;
+
+      // Base speed
+      const baseSpeed = 0.5;
+
+      // Random speed multiplier between 1 and 1.25
+      const speedMultiplier = 1 + (Math.random() * 0.5);
+
+      this.vx = ((Math.random() - 0.5) * baseSpeed) * speedMultiplier;
+      this.vy = ((Math.random() - 0.5) * baseSpeed) * speedMultiplier;
+
       this.element.style.left = `${this.x}px`;
       this.element.style.top = `${this.y}px`;
       bananas.appendChild(this.element);
