--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Banana Consultants</title>
     <meta name="description" content="">
 
-    <link rel="icon" href="/favicon.ico" sizes="any">
-    <link rel="icon" href="/icon.svg" type="image/svg+xml">
+    <link rel="icon" href="favicon.ico" sizes="any">
+    <link rel="icon" href="icon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="icon.png">
 
     <link rel="manifest" href="site.webmanifest">
