Moved the contact us button to the top right

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
         #contact {
             position: absolute;
-            bottom: 20px;
+            top: 20px;
             right: 20px;
             padding: 10px 20px;
             font-size: 16px;
@@ -82,7 +82,7 @@
             border: none;
             border-radius: 5px;
             cursor: pointer;
-            z-index: 20;
+            z-index: 30;
             text-decoration: none;
             display: inline-block;
         }
