Updating the email address

--- a/index.html
+++ b/index.html
@@ -262,7 +262,8 @@
 </div>
 
 <!--<button id="contact">Contact Us</button>-->
-<a href="mailto:connect@bananaconsultants.com" id="contact">Contact Us</a>
+<!--<a href="mailto:connect@bananaconsultants.com" id="contact">Contact Us</a>-->
+<a href="mailto:consultbanana@gmail.com" id="contact">Contact Us</a>
 
 <script>
     const bananas = document.getElementById('bananas');
