--- a/index.html
+++ b/index.html
@@ -12,249 +12,7 @@
 
     <link rel="manifest" href="site.webmanifest">
     <meta name="theme-color" content="#fafafa">
-
-    <style>
-        body {
-            margin: 0;
-            height: 100vh;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            background: radial-gradient(circle at center, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0) 70%),
-            repeating-radial-gradient(circle at center,
-                rgba(255, 255, 255, 0) 0px,
-                rgba(255, 255, 255, 0) 40px,
-                rgba(255, 255, 255, 0.03) 41px,
-                rgba(255, 255, 255, 0) 42px
-            ),
-            linear-gradient(to bottom, #000033, #000066);
-            background-size: 100% 100%, 100% 100%, 100% 100%;
-            overflow: hidden;
-            color: #FFD700;
-            font-family: Arial, sans-serif;
-            padding: 20px;
-            box-sizing: border-box;
-        }
-
-        #header {
-            position: absolute;
-            top: 20px;
-            left: 20px;
-            display: flex;
-            align-items: center;
-        }
-
-        #logo-link {
-            text-decoration: none;
-            display: flex;
-            align-items: center;
-        }
-
-        #logo {
-            width: 200px;
-            height: auto;
-            z-index: 30;
-        }
-
-        #about-link {
-            margin-left: 20px;
-            color: #FFD700;
-            text-decoration: none;
-            font-size: 18px;
-            line-height: 1;
-            display: flex;
-            align-items: center;
-        }
-
-        #bananas {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            pointer-events: none;
-            z-index: 20;
-        }
-
-        #contact {
-            position: absolute;
-            top: 20px;
-            right: 20px;
-            padding: 8px 16px;
-            font-size: 14px;
-            background-color: #FFD700;
-            color: #000066;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            z-index: 30;
-            text-decoration: none;
-            display: inline-block;
-        }
-
-        @media (max-width: 768px) {
-            #header {
-                flex-direction: column;
-                align-items: flex-start;
-            }
-
-            #logo {
-                width: 150px;
-                /*top: 10px;*/
-                /*left: 10px;*/
-            }
-
-            #about-link {
-                margin-left: 0;
-                margin-top: 10px;
-                font-size: 16px;
-            }
-
-            #contact {
-                top: 10px;
-                right: 10px;
-                padding: 6px 12px;
-                font-size: 12px;
-            }
-        }
-
-        @media (max-width: 480px) {
-            #header {
-                top: 10px;
-                left: 10px;
-            }
-
-            #logo {
-                width: 120px;
-            }
-
-            #about-link {
-                font-size: 14px;
-            }
-
-            #contact {
-                padding: 5px 10px;
-                font-size: 11px;
-            }
-        }
-
-        .banana {
-            position: absolute;
-            width: 60px;
-            height: 60px;
-            cursor: grab;
-            transition: all 0.5s ease-out;
-            pointer-events: auto;
-        }
-
-        @media (max-width: 768px) {
-            .banana {
-                width: 50px;
-                height: 50px;
-            }
-        }
-
-        @media (max-width: 480px) {
-            .banana {
-                width: 40px;
-                height: 40px;
-            }
-        }
-
-        .banana:hover {
-            cursor: pointer;
-        }
-
-        .banana:active {
-            cursor: grabbing;
-        }
-
-        #message {
-            text-align: center;
-            max-width: 600px;
-            width: 90%;
-            padding: 20px;
-            z-index: 10;
-            background-color: rgba(0, 0, 51, 0.7);
-            border-radius: 10px;
-            margin: 0 auto;
-        }
-
-        #message h1 {
-            font-size: 2.5em;
-            margin-bottom: 20px;
-            line-height: 1.2;
-        }
-
-        #message p {
-            font-size: 1em;
-            line-height: 1.4;
-        }
-
-        .highlight {
-            color: #FFA500;
-            font-weight: bold;
-        }
-
-        @media (max-width: 768px) {
-            #message {
-                width: 95%;
-                padding: 15px;
-            }
-
-            #message h1 {
-                font-size: 2em;
-                margin-bottom: 15px;
-            }
-
-            #message p {
-                font-size: 0.9em;
-            }
-        }
-
-        @media (max-width: 480px) {
-            #message {
-                width: 100%;
-                padding: 10px;
-            }
-
-            #message h1 {
-                font-size: 1.5em;
-                margin-bottom: 10px;
-            }
-
-            #message p {
-                font-size: 0.8em;
-            }
-        }
-
-        @media (max-width: 360px) {
-            body {
-                padding: 10px;
-            }
-
-            /*#logo {*/
-            /*    position: absolute;*/
-            /*    top: 10px;*/
-            /*    left: 10px;*/
-            /*    width: 100px;*/
-            /*    margin: 0;*/
-            /*}*/
-            #contact {
-                position: static;
-                display: block;
-                width: 100%;
-                max-width: 200px;
-                margin: 10px auto;
-                text-align: center;
-            }
-
-            #message {
-                margin-top: 20px;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="static/css/styles.css">
 </head>
 <body>
 <!--<div style="display: flex; align-items: center; position: absolute; top: 20px; left: 20px; z-index: 30;">
