Fixing the FOUC problem on firefox

--- a/about-us.html
+++ b/about-us.html
@@ -13,6 +13,11 @@
     <link rel="manifest" href="site.webmanifest">
     <meta name="theme-color" content="#fafafa">
     <link rel="stylesheet" href="static/css/styles.css">
+
+    <script>
+        /*to prevent Firefox FOUC, this must be here*/
+        let FF_FOUC_FIX;
+    </script>
 </head>
 <body>
 <div id="header">
