Added profile images

--- a/about-us.html
+++ b/about-us.html
@@ -66,12 +66,12 @@
 
 <div id="profiles">
     <div class="profile-box">
-        <img src="./static/profile.webp" alt="Person 1" class="profile-image">
+        <img src="./static/images/ishan.webp" alt="Ishan" class="profile-image">
         <h2 class="profile-name">Ishan</h2>
         <p class="profile-position">General Manager</p>
     </div>
     <div class="profile-box">
-        <img src="./static/profile.webp" alt="Person 2" class="profile-image">
+        <img src="./static/images/gautam.webp" alt="Gautam Kumar" class="profile-image">
         <h2 class="profile-name">Gautam Kumar</h2>
         <p class="profile-position">Managing Director</p>
     </div>
